Layout of htmls and images

--- a/index.html
+++ b/index.html
@@ -3,9 +3,37 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ProjectX</title>
+    <title>Recipes</title>
 </head>
 <body>
-    
+    <h1>The Great Pumpkin Pie Recipe</h1>
+    <hr>
+    <a href="https://sallysbakingaddiction.com/the-great-pumpkin-pie-recipe/" target=_blank>If you click on this you will go to the original recipe's website</a>
+      <br>
+      <br>
+     <img src="images/13711-homemade-fresh-pumpkin-pie-mfs253-4f645b3fd23e480e8873d0cc480c4910.jpg" height="50%" width="50%" alt="This is a picture of the pumpkin pie">
+      <br>
+      <br>
+     <img src="https://assets.epicurious.com/photos/583f2feee703bab774cf891a/4:3/w_871,h_653,c_limit/pumpkin-pie.jpg" height="30%" width="20%">
+    <h3>Description</h3>
+    Bursting with flavor, this pumpkin pie recipe is my very favorite. It’s rich, smooth, and tastes incredible on my homemade pie crust and served with whipped cream. The pie crust leaves are purely for decor, you can leave those off of the pie and only make 1 pie crust. You can also leave off the sugared cranberries.
+    <h3>Ingredients</h3>
+     <h4>Sugared Cranberries</h4>
+      <ul style="list-style-type: square;">
+       <li>1 cup (120g) fresh cranberries</li>
+       <li>2 cups (400g) granulated sugar, divided</li>
+       <li>1 cup (240ml) water</li>
+     </ul>
+    <h4>Pumpkin Pie</h4>
+        <ul style="list-style-type: square;">
+            <li> <a href="https://sallysbakingaddiction.com/baking-basics-homemade-buttery-flaky-pie-crust/" target=_blank>Homemade Pie Dough</a> (full recipe makes 2 crusts: 1 for bottom, 1 for leaf decor)</li>
+            <li>egg wash: 1 large egg beaten with 1 Tablespoon milk</li>
+            <li>one 15oz can (about 2 cups; 450g) pumpkin puree*</li>
+            <li>3 large eggs</li>
+            <li>1 and 1/4 cups (250g) packed light or dark brown sugar</li>
+        </ul>
+    <h3>Instructions</h3>
+    <h3>Notes</h3>
+
 </body>
 </html>
