--- a/index.html
+++ b/index.html
@@ -11,10 +11,31 @@
     <a href="https://sallysbakingaddiction.com/the-great-pumpkin-pie-recipe/" target=_blank>If you click on this you will go to the original recipe's website</a>
       <br>
       <br>
+      <a href="https://sallysbakingaddiction.com/the-great-pumpkin-pie-recipe/" target="_blank">
+      <button name="submit button" type="submit" value="Submit" 
+        style="background-color: aquamarine; 
+        color: brown; 
+        font-size: 15px;
+        font-family: monospace">
+        Like this recipe
+      </button>
+      </a>
+      <br>
+      <br>
      <img src="images/13711-homemade-fresh-pumpkin-pie-mfs253-4f645b3fd23e480e8873d0cc480c4910.jpg" height="50%" width="50%" alt="This is a picture of the pumpkin pie">
       <br>
       <br>
      <img src="https://assets.epicurious.com/photos/583f2feee703bab774cf891a/4:3/w_871,h_653,c_limit/pumpkin-pie.jpg" height="30%" width="20%">
+     <br>
+    Mariachi:
+     <audio controls>
+        <source src="Classic Mariachi - Jimena Contreras.mp3">
+        </audio>
+        <br>
+        <br>
+        <video height="350" width="350" controls loop muted>
+            <source src="images/v0f044gc0000cig7c43c77u46ad80k20.mp4">
+         </video>
     <h3>Description</h3>
     Bursting with flavor, this pumpkin pie recipe is my very favorite. It’s rich, smooth, and tastes incredible on my homemade pie crust and served with whipped cream. The pie crust leaves are purely for decor, you can leave those off of the pie and only make 1 pie crust. You can also leave off the sugared cranberries.
     <h3>Ingredients</h3>
